TEST_PROGRAMS/typing_benchmarks/invalid/block_scope4.go
package main

func main() {
	for {
		var x int
	}
	println(x)
}
